--- a/css/style.css
+++ b/css/style.css
@@ -408,6 +408,29 @@ section h2 {
   background-color: rgba(222, 184, 135, 0.267);
 }
 
+.card-container-dolar {
+  display: flex;
+  /* flex-wrap: wrap; */
+  /* background-color: antiquewhite; */
+  width: 50%;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid #000; */
+  /* border-radius: 5px; */
+  gap: 20px;
+  /* padding: 1.875rem; */
+  /* box-shadow: 0.1875rem 0.1875rem 0.625rem rgb(34, 33, 33); */
+}
+
+.card-dolar {
+  width: 10.5rem;
+  /* padding: 1.25rem; */
+  border: 0.0625rem solid #000;
+  border-radius: 0.3125rem;
+  text-align: center;
+  background-color: rgba(222, 184, 135, 0.267);
+}
+
 .container-table {
   display: flex;
   flex-wrap: wrap;
@@ -657,6 +680,17 @@ legend {
 
 .imagen-redes {
   width: 20%;
+}
+
+.listaH {
+  display: flex;
+  flex-direction: row;
+}
+
+.listaH li {
+  text-decoration: none;
+  list-style: none;
+  padding-left: 2rem;
 }
 
 @media (max-width: 1700px) {
